# job-agents

./: .env.example  .gitignore  Context.md  Makefile  README.md  SKILLSET.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py
app/cli/: main.py
app/config/: settings.py
app/models/: __init__.py  audit.py  base.py  company.py  enums.py  job.py  run.py
app/repositories/: audit_repository.py  company_repository.py  db.py  job_repository.py
app/scanners/ats/: base.py  greenhouse.py
app/schemas/: jobs.py
app/services/: candidate_profile.py  company_registry.py  company_scan.py  dashboard.py  job_ingestion.py  job_review.py  scan_blocks.py
app/utils/: company_text.py  job_text.py
app/web/: app.py
app/web/routes/: companies.py  main.py  opportunities.py
app/web/static/css/: app.css
app/web/templates/: base.html  dashboard.html
app/web/templates/companies/: detail.html  form.html  list.html  rebalance_preview.html
app/web/templates/opportunities/: detail.html  list.html
config/: scan-policy.example.yaml  seed-policy.example.yaml  settings.example.yaml
docs/: architecture.md  ats-adapters.md  configuration.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_phase3_job_lifecycle.py
tests/: conftest.py
tests/integration/: test_company_registry_csv.py
tests/unit/: test_candidate_profile.py  test_company_registry_service.py  test_company_scan_service.py  test_config.py  test_greenhouse_adapter.py  test_job_ingestion_service.py  test_opportunities_ui.py  test_web.py
